# zeroclaw-plugins

./: README.md  registry.json
plugins/lending-health/: Cargo.toml  manifest.toml
plugins/lending-health/src/: lending.rs  lib.rs
plugins/sns-resolve/: Cargo.toml  README.md  manifest.toml
plugins/sns-resolve/src/: lib.rs  resolve.rs
plugins/solana-pay-request/: Cargo.toml  README.md  manifest.toml
plugins/solana-pay-request/src/: lib.rs  pay.rs
plugins/token-risk-check/: Cargo.toml  README.md  manifest.toml
plugins/token-risk-check/src/: lib.rs  risk.rs
plugins/wallet-narrate/: Cargo.toml  README.md  manifest.toml
plugins/wallet-narrate/src/: lib.rs  narrate.rs
