[package]
name = "lending-health"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "ZeroClaw WIT plugin: monitor Kamino/MarginFi/Drift lending health factors"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-client-wasip2 = "0.1.0"

[dev-dependencies]
solana-client-wasip2 = { version = "0.1.0", features = ["test"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
