[package]
name = "solana-pay-request"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "ZeroClaw WIT plugin: generate Solana Pay request URLs for transfer transactions"
publish = false

# cdylib for the wasm component; rlib so the pure URL builder is testable
# on the host with a plain `cargo test`.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# Standalone crate: built for wasm32-wasip2, not part of the host workspace.
[workspace]
