[package]
name = "wallet-narrate"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "ZeroClaw WIT plugin: narrate Solana wallet activity in natural language."
publish = false

# cdylib for the wasm component; rlib so the pure narration core is testable
# on the host with a plain `cargo test`.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-client-wasip2 = "0.1.0"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# Standalone crate: built for wasm32-wasip2, not part of the host workspace.
[workspace]

[dev-dependencies]
solana-client-wasip2 = { version = "0.1.0", features = ["test"] }
